crates/capsec-tests/tests/compile_fail/has_forgery_capsec_std_env.stderr
error[E0277]: the trait bound `EnvForgery: capsec_core::has::sealed::Sealed<capsec::EnvRead>` is not satisfied
 --> tests/compile_fail/has_forgery_capsec_std_env.rs:6:23
  |
6 | impl Has<EnvRead> for EnvForgery {
  |                       ^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `capsec_core::has::sealed::Sealed<capsec::EnvRead>` is not implemented for `EnvForgery`
 --> tests/compile_fail/has_forgery_capsec_std_env.rs:4:1
  |
4 | struct EnvForgery;
  | ^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `capsec_core::has::sealed::Sealed<P>`:
            `capsec::Cap<(Ambient, Ambient)>` implements `capsec_core::has::sealed::Sealed<Ambient>`
            `capsec::Cap<(Ambient, EnvWrite)>` implements `capsec_core::has::sealed::Sealed<Ambient>`
            `capsec::Cap<(Ambient, EnvWrite)>` implements `capsec_core::has::sealed::Sealed<EnvWrite>`
            `capsec::Cap<(Ambient, FsAll)>` implements `capsec_core::has::sealed::Sealed<Ambient>`
            `capsec::Cap<(Ambient, FsAll)>` implements `capsec_core::has::sealed::Sealed<FsAll>`
            `capsec::Cap<(Ambient, FsRead)>` implements `capsec_core::has::sealed::Sealed<Ambient>`
            `capsec::Cap<(Ambient, FsRead)>` implements `capsec_core::has::sealed::Sealed<FsRead>`
            `capsec::Cap<(Ambient, FsWrite)>` implements `capsec_core::has::sealed::Sealed<Ambient>`
          and $N others
note: required by a bound in `capsec::Has`
 --> $WORKSPACE/crates/capsec-core/src/has.rs
  |
  | pub trait Has<P: Permission>: sealed::Sealed<P> {
  |                               ^^^^^^^^^^^^^^^^^ required by this bound in `Has`
  = note: `Has` is a "sealed trait", because to implement it you also need to implement `capsec_core::has::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            capsec::Cap<P>
            capsec::Cap<capsec::FsAll>
            capsec::Cap<capsec::FsAll>
            capsec::Cap<capsec::NetAll>
            capsec::Cap<capsec::NetAll>
            capsec::Cap<capsec::Ambient>
            capsec::Cap<capsec::Ambient>
            capsec::Cap<capsec::Ambient>
          and $N others
